# puckle

./: Cargo.toml  README.md  ambient.toml
assets/: greg.fbx  island_level.vox  level.glb  level.vox  pipeline.json  player.glb
src/: camera.rs  client.rs  lib.rs  server.rs
tmp/: Gizmo Shader.wgsl  GpuWorldUpdate.Culling.wgsl  Outlines.wgsl  cloud shader.wgsl  collect.wgsl  standard_shader_loading_material_shader_false.wgsl  standard_shader_pbr_material_shader_false.wgsl  standard_shader_rect_material_shader_false.wgsl  standard_shader_text_material_shader_false.wgsl
