[package]
name = "puckle"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
# ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "4ac24158" }
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "cbbd926d" }
rand = "0.8.5"
vox-format = "0.1.0"

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
